# dysmalpy

./: .gitignore  CLAUDE.md  README.rst  activate_alma.sh  benchmark_results.txt  setup.cfg  setup.py
demo/: JAXNS_RUN_REPORT.md  benchmark_mcmc_speed.md  demo_2D_fitting_JAXNS.md  demo_2D_fitting_JAXNS.py  demo_2D_fitting_MCMC.md  demo_2D_fitting_MCMC.py  demo_2D_fitting_MPFIT.md  demo_2D_fitting_MPFIT.py
demo/bak_demo_2D_output_jaxns/: GS4_43501_fitting_2D_jaxns_demo.params  GS4_43501_jaxns_results.pickle  GS4_43501_jaxns_sampler_results.pickle  fitting_2D_jaxns_demo.params
dev/: CUSTOM_GD_IMPLEMENTATION_SUMMARY.md  GAUSSIAN_FITTING_METHODS.md  HYBRID_SPEEDUP_REPORT.md  JAX_Gaussian_Fitting_Summary.md  JAX_Gaussian_NextSteps.md  bench_tutorial.py  benchmark_cube.py  benchmark_fitting.py  benchmark_mcmc.py  benchmark_results.md  compare_end_to_end.py  compare_pipelines.py  debug_mcmc.md  debug_plot_cube_comparison.py  debug_reproduce_mcmc_residuals.py  debug_save_cube_moments.py  develop_log.md  develop_note.md  development_note.md  pinpoint_discrepancy.py  plan.md  plan_jaxns.md  problem.md  prompt.md  speedup.md  test_fitting_1D.py  test_jaxns.py
dev/debug_jaxns/: COMPLETE_ANALYSIS.md  INVESTIGATION_RESULTS.md  INVESTIGATION_SUMMARY.md  WEIGHT_EVOLUTION_FIX.md  analyze_jaxns_results.py  check_mask_direct.py  check_mask_values.py  debug_likelihood.py
dysmalpy/: __init__.py  aperture_classes.py  config.py  convolution.py  data_classes.py  instrument.py  observation.py  parameters.py  plotting.py  utils.py  utils_io.py
dysmalpy/fitting/: __init__.py  base.py  jax_gaussian_fitting.py  jax_loss.py  mcmc.py  (+5 more)
tests/: conftest.py  test_fitting.py  test_jax.py  test_models.py  validate_gaussian_fit_simple.py
(+26 files in other folders)
