[metadata]
name = dysmalpy
description = 'A modelling and fitting package for galaxy kinematics.'
long_description = readme
url = https://github.com/dysmalpy/dysmalpy
author_email = shimizu@mpe.mpg.de
author = MPE IR/Sub-mm Group
requires_python = >=3.10.0

classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Natural Language :: English

project_urls =
    Bug Tracker = https://github.com/dysmalpy/dysmalpy/issues
    Source Code = https://github.com/dysmalpy/dysmalpy


[options]
packages = find:
install_requires =
    numpy>=2.0
    scipy>=1.9.3
    matplotlib
    astropy>=6.0
    emcee>=3
    corner>=2.2.2
    dill>=0.3.7
    shapely>=2
    photutils>=1.8.0
    spectral-cube>=0.6.0
    radio-beam>=0.3.3
    h5py>=3.8.0
    pandas
    multiprocess
    dynesty>=2.1.3
    # JAX (CPU backend — install jax-cuda12-plugin==0.7.2 separately for GPU support)
    jax==0.7.2
    jaxlib==0.7.2
    # JAXNS nested sampling (optional — requires tfp-nightly for JAX >= 0.7.0)
    tfp-nightly
    jaxns==2.6.9
    # CUDA plugin for GPU support (optional — requires CUDA 12.4+ and CUPTI library)
    # jax-cuda12-plugin==0.7.2  # Uncomment and install for GPU support


setup_requirements =
    numpy>=2.0


[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

